# wappalyzerjs

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
python/: pyproject.toml
python/wappalyzerjs/: __init__.py  detector.py
python/wappalyzerjs/bundle/: detect-full.bundle.js
scripts/: fetch-rules.ts
src/: cli.ts  detect-full.ts  detect.ts  index.ts  technologies.ts  types.ts
tests/: detect.test.ts
