[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wappalyzerjs"
version = "0.1.0"
description = "Browser-based technology detection for Playwright — JS globals, DOM, and script analysis"
license = "MIT"
requires-python = ">=3.11"

[project.optional-dependencies]
playwright = ["playwright>=1.40"]

[tool.setuptools.packages.find]
include = ["wappalyzerjs*"]

[tool.setuptools.package-data]
wappalyzerjs = ["py.typed", "bundle/*.js"]
